<resources>
    <string name="app_name">CouscousApp</string>
    <string name="label_reader">Reader View</string>
    <string name="content_category">Content Category</string>
    <string name="base_url">http://app.comppress.org:8080/</string>
    <string name="hint_username">Benutzername</string>
    <string name="hint_password">Passwort</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="button_login">Einloggen</string>
    <string name="button_download">Download APK</string>
    <string name="button_submit">Bestätigen</string>
    <string name="search_title">Suche</string>
    <string name="customize_title">Inhalte filtern</string>
    <string name="sort_title">Sortierung anpassen</string>
    <string name="rate_title">Bewerten</string>
    <string name="comment_title">Kommentieren</string>
    <string name="favorite_title">Zu Favoriten hinzufügen</string>
    <string name="browser_title">Im Browser öffnen</string>
    <string name="rating_criterion_1">Ratingkriterium 1</string>
    <string name="rating_criterion_2">Ratingkriterium 2</string>
    <string name="rating_criterion_3">Ratingkriterium 3</string>
    <string name="open">\"Öffnen\"</string>
    <string name="close">\"Schließen\"</string>
    <string name="login_logo">Login Logo</string>
    <string name="rate">Bewerten</string>
    <string name="day">Tag</string>
    <string name="week">Woche</string>
    <string name="month">Monat</string>
    <string name="source">Quelle</string>
    <string name="title">TITEL - Lorem ipsum dolor sit amet, consetetur - TITEL</string>
    <string name="time">vor 60 Minuten</string>
    <string name="rating">Neu</string>
    <string name="article_image">Artikelbild</string>
</resources>