<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item
        android:id="@+id/rate"
        android:icon="@drawable/grade_24px"
        android:title="@string/rate_title"
        app:showAsAction="always" />-->
    <item
        android:id="@+id/comment"
        android:icon="@drawable/mode_comment_24px"
        android:title="@string/comment_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/favorite_border_24px"
        android:title="@string/favorite_title"
        app:showAsAction="never" />

    <item android:id="@+id/browser"
        android:title="@string/browser_title"
        app:showAsAction="never"/>

</menu>
